PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.3.0 RC 4
- Added phar.phar generation for Windows. (Greg)

- Fixed bug #48533 (__callStatic is not invoked for private/protected methods).
  (Felipe)

11 Jun 2009, PHP 5.3.0 RC 3
- Upgraded bundled sqlite to version 3.6.14.2. (Scott, Ilia)
- Upgraded bundled libmagic to 5.03 in the fileinfo extension. (Scott)

- Removed all zend_extension_* php.ini directives. Zend extensions are now
  always loaded using zend_extension directive. (Derick)

- Changed SQLite3::loadExtension() to be disabled for threaded SAPIs. (Scott)

- Added constants based on Windows' GetVersionEx information. 
  PHP_WINDOWS_VERSION_* and PHP_WINDOWS_NT_*. (Pierre)
- Added the ability for json_decode() to take a user specified depth. (Scott)
- Added support for the mysql_stmt_next_result() function from libmysql.
  (Andrey)
- Added support for ACL (is_writable, is_readable, reports now correct results)
  on Windows. (Pierre, Venkat Raman Don, Kanwaljeet Singla)

- Fixed bug #48493 (spl_autoload_register() doesn't work correctly when
  prepending functions). (Scott)
- Fixed bug #48257 (PharData throws exception with non-phar tar). (Greg)
- Fixed bug #48227 (NumberFormatter::format leaks memory). (Felipe)
- Fixed bug #48200 (compile failure with mbstring.c when 
  --enable-zend-multibyte is used). (Jani)
- Fixed bug #48188 (Cannot execute a scrollable cursors twice with
  PDO_PGSQL). (Matteo)
- Fixed bug #41874 (separate STDOUT and STDERR in exec functions).
  (Kanwaljeet Singla, Venkat Raman Don, Pierre)
- Fixed bug #38802 (max_redirects and ignore_errors).
  (patch by datibbaw@php.net)
- Fixed isset() on phar sub-directories (isset($phar["blah"]) if
  file "blah/foo.php" exists in the phar archive). (Greg)
- Fixed security vulnerability in phar's handling of long tar filenames. (Greg)